--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -61,6 +61,80 @@
   organization={SBC}
 }
 
+@inproceedings{barata2023data,
+  title={What about data science? An analysis of the market based on Job posts},
+  author={Barata, Barbara AP and Justino, Adrielson F and Junior, Antonio FL Jacob and Lobato, F{\'a}bio MF},
+  booktitle={Anais do XX Encontro Nacional de Intelig{\^e}ncia Artificial e Computacional},
+  pages={824--838},
+  year={2023},
+  organization={SBC}
+}
+@inproceedings{araujo2023natural,
+  title={Natural Language Processing and Social Media: a systematic mapping on Brazilian leading events},
+  author={Ara{\'u}jo, Gabriele de S and Leite, J{\'e}ssica Brenda P and da Silva, Marcelino S and Junior, Antonio FL Jacob and Lobato, F{\'a}bio MF},
+  booktitle={Anais do XX Encontro Nacional de Intelig{\^e}ncia Artificial e Computacional},
+  pages={741--755},
+  year={2023},
+  organization={SBC}
+}
+@inproceedings{do2023embeddings,
+  title={Embeddings Jur{\'\i}dico: Representa{\c{c}}{\~o}es Orientadas {\`a} Linguagem Jur{\'\i}dica Brasileira},
+  author={do Carmo, Fabr{\'\i}cio A and Serejo, Ferdinando and Junior, Antonio FL Jacob and Santana, Ewaldo EC and Lobato, F{\'a}bio MF},
+  booktitle={Anais do XI Workshop de Computa{\c{c}}{\~a}o Aplicada em Governo Eletr{\^o}nico},
+  pages={188--199},
+  year={2023},
+  organization={SBC}
+}
+@article{lobato2023analise,
+  title={An{\'a}lise, otimiza{\c{c}}{\~a}o e acompanhamento de um servi{\c{c}}o de psicologia universit{\'a}rio: uma abordagem baseada em ci{\^e}ncia de dados},
+  author={Lobato, Fabio and Po{\c{c}}a, Milena and Canto, Viviane},
+  journal={Revista da CGU},
+  volume={15},
+  number={27},
+  year={2023}
+}
+@article{justino2023análise,
+  title={Análise orientada a dados como aux{\'\i}lio para tomada de decisão em gestão de pesquisa},
+  author={Justino, Adrielson and Nhoatto, Fabiano and Souza, Efren and Lobato, Fabio},
+  journal={Revista da CGU},
+  volume={15},
+  number={27},
+  year={2023}
+}
+@article{do2023text,
+  title={Text representations for lyric-based identification of musical subgenres},
+  author={do Carmo, Fabr{\'\i}cio Almeida and da Silva Junior, Jorge Luiz Figueira and Rossi, Rafael Geraldeli and Lobato, F{\'a}bio Manoel Fran{\c{c}}a},
+  journal={IEEE Latin America Transactions},
+  volume={21},
+  number={6},
+  pages={737--744},
+  year={2023}
+}
+@article{de2023cars,
+  title={A CARS of Novels with Imbalanced Sample Treatment},
+  author={de Faccio, Lucas and Marcolin, Carla and Lobato, F{\'a}bio},
+  journal={Anais do Computer on the Beach},
+  volume={14},
+  pages={009--016},
+  year={2023}
+}
+@article{pimentel2023aplicaccao,
+  title={Aplica{\c{c}}{\~a}o de t{\'e}cnicas de aprendizagem de m{\'a}quina com sele{\c{c}}{\~a}o de vari{\'a}veis na previs{\~a}o de receitas p{\'u}blicas de 8 capitais},
+  author={Pimentel, Cl{\'a}udia Patr{\'\i}cia S and Lobato, F{\'a}bio and Jacob Jr, Antonio},
+  journal={Anais do Computer on the Beach},
+  volume={14},
+  pages={264--271},
+  year={2023}
+}
+@article{aleixo2023analise,
+  title={An{\'a}lise Comparativa de Plataformas de M{\'\i}dias Sociais Tur{\'\i}sticas: um Estudo de Caso de Booking e TripAdvisor para o Munic{\'\i}pio de Santar{\'e}m, Par{\'a}},
+  author={Aleixo, Marlisson Jean Amaral and de Sousa Araujo, Gabriele and do Carmo, Fernando Almeida and Junior, Antonio Fernando Lavareda Jacob and Lobato, F{\'a}bio Manoel Fran{\c{c}}a},
+  journal={Anais do Computer on the Beach},
+  volume={14},
+  pages={070--077},
+  year={2023}
+}
+
 @article{Deep,
    abstract = {<p>Emerging deep learning-based applications in precision medicine include computational histopathological analysis. However, there is a lack of the required training image datasets to generate classification and detection models. This phenomenon occurs mainly due to human factors that make it difficult to obtain well-annotated data. The present study provides a curated public collection of histopathological images (DeepHP) and a convolutional neural network model for diagnosing gastritis. Images from gastric biopsy histopathological exams were used to investigate the performance of the proposed model in detecting gastric mucosa with Helicobacter pylori infection. The DeepHP database comprises 394,926 histopathological images, of which 111 K were labeled as Helicobacter pylori positive and 283 K were Helicobacter pylori negative. We investigated the classification performance of three Convolutional Neural Network architectures. The models were tested and validated with two distinct image sets of 15% (59K patches) chosen randomly. The VGG16 architecture showed the best results with an Area Under the Curve of 0.998%. The results showed that CNN could be used to classify histopathological images from gastric mucosa with marked precision. Our model evidenced high potential and application in the computational pathology field.</p>},
    author = {Wanderson Gonçalves e Gonçalves and Marcelo Henrique Paula dos Santos and Leonardo Miranda Brito and Helber Gonzales Almeida Palheta and Fábio Manoel França Lobato and Samia Demachki and Ândrea Ribeiro-dos-Santos and Gilderlanio Santana de Araújo},
