--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -134,6 +134,22 @@
   pages={070--077},
   year={2023}
 }
+@inproceedings{pedroso2022handling,
+  title={Handling out of vocabulary words at the semantical level using recurrent neural networks},
+  author={Pedroso, Paula ML and Lobato, F{\'a}bio MF and de JV S{\'a}, Eveline and Jacob, Antonio FL},
+  booktitle={2022 IEEE/WIC/ACM International Joint Conference on Web Intelligence and Intelligent Agent Technology (WI-IAT)},
+  pages={88--94},
+  year={2022},
+  organization={IEEE}
+}
+@inproceedings{batista2022technology,
+  title={Technology transfer in e-communication for small and medium enterprises as promoters of innovation and competitiveness},
+  author={Batista, Alessandra and Bessa, Ana Carolina Cutrim and Junior, Antonio Fernando L Jacob and Lobato, F{\'a}bio Manoel Fran{\c{c}}a},
+  booktitle={2022 IEEE/WIC/ACM International Joint Conference on Web Intelligence and Intelligent Agent Technology (WI-IAT)},
+  pages={527--533},
+  year={2022},
+  organization={IEEE}
+}
 
 @article{Deep,
    abstract = {<p>Emerging deep learning-based applications in precision medicine include computational histopathological analysis. However, there is a lack of the required training image datasets to generate classification and detection models. This phenomenon occurs mainly due to human factors that make it difficult to obtain well-annotated data. The present study provides a curated public collection of histopathological images (DeepHP) and a convolutional neural network model for diagnosing gastritis. Images from gastric biopsy histopathological exams were used to investigate the performance of the proposed model in detecting gastric mucosa with Helicobacter pylori infection. The DeepHP database comprises 394,926 histopathological images, of which 111 K were labeled as Helicobacter pylori positive and 283 K were Helicobacter pylori negative. We investigated the classification performance of three Convolutional Neural Network architectures. The models were tested and validated with two distinct image sets of 15% (59K patches) chosen randomly. The VGG16 architecture showed the best results with an Area Under the Curve of 0.998%. The results showed that CNN could be used to classify histopathological images from gastric mucosa with marked precision. Our model evidenced high potential and application in the computational pathology field.</p>},
