--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,27 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{leite2024computational,
+  title={Computational tools for neuronal morphometric analysis: a systematic search and review},
+  author={Leite, J{\'e}ssica and Nhoatto, Fabiano and Jacob Jr, Antonio and Santana, Roberto and Lobato, F{\'a}bio},
+  journal={Neuroinformatics},
+  volume={22},
+  number={3},
+  pages={353--377},
+  year={2024},
+  publisher={Springer}
+}
+
+@article{tapajos2024design,
+  title={O Design Thinking como ferramenta na gera{\c{c}}{\~a}o de bioneg{\'o}cios de impacto social e empreendedorismo feminino na Amaz{\^o}nia},
+  author={Tapaj{\'o}s, B{\'a}rbara and Lobato, F{\'a}bio and Nunes, Kariane},
+  journal={Estudos em Design},
+  volume={32},
+  number={2},
+  year={2024}
+}
+
+
 @article{jacob2024evoimp,
   title={EvoImp: Multiple Imputation of Multi-label Classification data with a genetic algorithm},
   author={Jacob Junior, Antonio Fernando Lavareda and do Carmo, Fabricio Almeida and de Santana, Adamo Lima and Santana, Ewaldo Eder Carvalho and Lobato, Fabio Manoel Franca},
