Atualização das publicações

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,16 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{do2024predatismo,
+  title={Predatismo no brasil: um rx sobre peri{\'o}dicos nas indexa{\c{c}}{\~o}es dos Qualis da capes usando t{\'e}cnicas de minera{\c{c}}{\~a}o de texto},
+  author={do Carmo, Fernando Almeida and Rezende, Solange Oliveira and Lobato, F{\'a}bio Manoel Fran{\c{c}}a},
+  journal={Episteme Transversalis},
+  volume={15},
+  number={1},
+  pages={280--299},
+  year={2024}
+}
+
 @article{leite2024computational,
   title={Computational tools for neuronal morphometric analysis: a systematic search and review},
   author={Leite, J{\'e}ssica and Nhoatto, Fabiano and Jacob Jr, Antonio and Santana, Roberto and Lobato, F{\'a}bio},
@@ -22,7 +32,6 @@
   number={2},
   year={2024}
 }
-
 
 @article{jacob2024evoimp,
   title={EvoImp: Multiple Imputation of Multi-label Classification data with a genetic algorithm},
