--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,69 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{wcge1,
+ author = {Victor Silveira and Pedro Menezes and Marcelino Silva and Fabrício Carmo and Fábio Lobato},
+ title = { Classificação de Linguagem Simples: uma abordagem baseada em Leiturabilidade e Legibilidade},
+ booktitle = {Anais do XII Workshop de Computação Aplicada em Governo Eletrônico},
+ location = {Brasília/DF},
+ year = {2024},
+ keywords = {},
+ issn = {2763-8723},
+ pages = {99--110},
+ publisher = {SBC},
+ address = {Porto Alegre, RS, Brasil},
+ doi = {10.5753/wcge.2024.2536},
+ url = {https://sol.sbc.org.br/index.php/wcge/article/view/29530}
+}
+
+@inproceedings{wcge2,
+ author = {André Reis and Jonathan Fernandez and Gabriele Araújo and Antonio Jacob Jr. and Fábio Lobato},
+ title = { Um olhar sobre as Fundações de Amparo à Pesquisa: analisando a cobertura midiática sobre FAPESPA, FAPEAM e FAPEMA},
+ booktitle = {Anais do XII Workshop de Computação Aplicada em Governo Eletrônico},
+ location = {Brasília/DF},
+ year = {2024},
+ keywords = {},
+ issn = {2763-8723},
+ pages = {74--86},
+ publisher = {SBC},
+ address = {Porto Alegre, RS, Brasil},
+ doi = {10.5753/wcge.2024.2440},
+ url = {https://sol.sbc.org.br/index.php/wcge/article/view/29528}
+}
+
+@inproceedings{kdmile,
+ author = {Matheus Couto and Fernando Carmo and Antonio Jacob Jr and Ricardo Marcacini and Fábio Lobato},
+ title = { Characterization of co-authorship networks of CNPq productivity fellows: an approach based on data science},
+ booktitle = {Anais do XII Symposium on Knowledge Discovery, Mining and Learning},
+ location = {Belém/PA},
+ year = {2024},
+ keywords = {},
+ issn = {2763-8944},
+ pages = {113--120},
+ publisher = {SBC},
+ address = {Porto Alegre, RS, Brasil},
+ doi = {10.5753/kdmile.2024.244728},
+ url = {https://sol.sbc.org.br/index.php/kdmile/article/view/30955}
+}
+
+
+
+@inproceedings{do2024crm,
+  title={CRM Market Overview: A Case Study of Job Vacancies},
+  author={Do Carmo, Fernando Almeida and Menezes, Pedro Henrique Costa and Barata, B{\'a}rbara Adriana Pires and Jacob, Antonio Fernando Lavareda and Lobato, F{\'a}bio Manoel Fran{\c{c}}a},
+  booktitle={Proceedings of the 20th Brazilian Symposium on Information Systems},
+  pages={1--10},
+  year={2024}
+}
+
+@inproceedings{araujo2024persona,
+  title={Persona and issue analysis on tourism social media: a case study of Piren{\'o}polis, Goi{\'a}s, Brazil},
+  author={Ara{\'u}jo, Gabriele De Sousa and Fernandez, Jonathan Oliveira and Da Silva, Marcelino Silva and Lobato, F{\'a}bio Manoel Fran{\c{c}}a},
+  booktitle={Proceedings of the 20th Brazilian Symposium on Information Systems},
+  pages={1--10},
+  year={2024}
+}
+
 @article{do2024predatismo,
   title={Predatismo no brasil: um rx sobre peri{\'o}dicos nas indexa{\c{c}}{\~o}es dos Qualis da capes usando t{\'e}cnicas de minera{\c{c}}{\~a}o de texto},
   author={do Carmo, Fernando Almeida and Rezende, Solange Oliveira and Lobato, F{\'a}bio Manoel Fran{\c{c}}a},
