--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -48,6 +48,20 @@
  url = {https://sol.sbc.org.br/index.php/kdmile/article/view/30955}
 }
 
+@inproceedings{sscad_estendido,
+ author = {Vitor Emerique and Fábio Lobato and Marcelino Silva},
+ title = { Implantação e Avaliação de um Sistema de Monitoramento de Recursos Computacionais de Cluster: um enfoque em desenvolvimento sustentável},
+ booktitle = {Anais Estendidos do XXV Simpósio em Sistemas Computacionais de Alto Desempenho},
+ location = {São Carlos/SP},
+ year = {2024},
+ keywords = {},
+ issn = {0000-0000},
+ pages = {113--120},
+ publisher = {SBC},
+ address = {Porto Alegre, RS, Brasil},
+ doi = {10.5753/sscad_estendido.2024.244369},
+ url = {https://sol.sbc.org.br/index.php/sscad_estendido/article/view/30976}
+}
 
 
 @inproceedings{do2024crm,
