--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,19 @@
 
 @string{aps = {American Physical Society,}}
 
+
+@incollection{Couto2023Analise,
+    author = {Couto, Danielle Costa Carrara and Costa, Geandreson de Souza and Hartery, Nicole Moura and Lobato, F{\'a}bio M.F.},
+    title = {An{\'a}lise explorat{\'o}ria de dados em redes sociais online sobre o movimento feminista no Twitter},
+    booktitle = {3{\textordmasculine} Colet{\^a}nea de Artigos -- TIC, Governan{\c{c}}a da Internet, G{\^e}nero, Ra{\c{c}}a e Diversidade - Tend{\^e}ncias e Desafios},
+    pages = {301-326},
+    year = 2023,
+    publisher = {CGI.br},
+    isbn = {9786585417099},
+    address = {S{\~a}o Paulo, BRA},
+    url = {https://bibliotecadigital.acervo.nic.br/handle/123456789/2240},
+}
+
 @inproceedings{wcge1,
  author = {Victor Silveira and Pedro Menezes and Marcelino Silva and Fabrício Carmo and Fábio Lobato},
  title = { Classificação de Linguagem Simples: uma abordagem baseada em Leiturabilidade e Legibilidade},
