--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,51 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{santos8use,
+  title={USE OF BAYESIAN NETWORKS IN BRAZIL HIGH SCHOOL EDUCATIONAL DATABASE: ANALYSIS OF THE IMPACT OF COVID-19 ON ENEM IN PAR{\'A} BETWEEN 2019 AND 2022},
+  author={Santos, Sandio Maciel Dos and Silva, Marcelino Silva da and Fran{\c{c}}a Lobato, F{\'a}bio Manoel and Franc{\^e}s, Carlos Renato Lisboa},
+  journal={Frontiers in Big Data},
+  volume={8},
+  pages={1485493},
+  publisher={Frontiers}
+}
+
+@inproceedings{tomita2023weak,
+  title={Weak supervision for question and answering sentiment analysis},
+  author={Tomita, Victor Akihito Kamada and Lobato, F{\'a}bio Manoel Fran{\c{c}}a and Marcacini, Ricardo Marcondes},
+  booktitle={2023 International Conference on Machine Learning and Applications (ICMLA)},
+  pages={1895--1900},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{moraes2024panorama,
+  title={Panorama do mercado de jogos eletr{\^o}nicos: um estudo de caso de vagas de emprego},
+  author={Moraes, Elyan MF and Albuquerque, Matheus and do Carmo, Fernando A and Barata, Barbara AP and Junior, Antonio FL Jacob and Lobato, F{\'a}bio MF},
+  booktitle={Simp{\'o}sio Brasileiro de Jogos e Entretenimento Digital (SBGames)},
+  pages={1525--1536},
+  year={2024},
+  organization={SBC}
+}
+
+@inproceedings{menezes2024complaint,
+  title={Complaint Analysis in Digital Banks: Topic Modeling Based on Large Language Model},
+  author={Menezes, Pedro C and do Carmo, Fabr{\'\i}cio A and Marcacini, Ricardo M and Junior, Antonio FL Jacob and Lobato, F{\'a}bio MF},
+  booktitle={Encontro Nacional de Intelig{\^e}ncia Artificial e Computacional (ENIAC)},
+  pages={942--953},
+  year={2024},
+  organization={SBC}
+}
+
+@inproceedings{fernandez2024artificial,
+  title={Artificial Intelligence in the Spotlight: A Study of Brazilian News Coverage},
+  author={Fernandez, Jonathan Oliveira and Pontes, Andrey Silva and Rezende, Solange Oliveira and Lobato, F{\'a}bio Manoel Fran{\c{c}}a},
+  booktitle={Encontro Nacional de Intelig{\^e}ncia Artificial e Computacional (ENIAC)},
+  pages={858--869},
+  year={2024},
+  organization={SBC}
+}
+
 
 @incollection{Couto2023Analise,
     author = {Couto, Danielle Costa Carrara and Costa, Geandreson de Souza and Hartery, Nicole Moura and Lobato, F{\'a}bio M.F.},
