--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,12 +3,15 @@
 
 @string{aps = {American Physical Society,}}
 
+
+
 @article{santos8use,
   title={USE OF BAYESIAN NETWORKS IN BRAZIL HIGH SCHOOL EDUCATIONAL DATABASE: ANALYSIS OF THE IMPACT OF COVID-19 ON ENEM IN PAR{\'A} BETWEEN 2019 AND 2022},
   author={Santos, Sandio Maciel Dos and Silva, Marcelino Silva da and Fran{\c{c}}a Lobato, F{\'a}bio Manoel and Franc{\^e}s, Carlos Renato Lisboa},
   journal={Frontiers in Big Data},
   volume={8},
   pages={1485493},
+  year={2025},
   publisher={Frontiers}
 }
 
