--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,42 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{ubeda2025avaliaccao,
+  title={Avalia{\c{c}}ao Autom{\'a}tica da Qualidade das Respostas para Reclama{\c{c}}oes no Setor de Telefonia no Brasil},
+  author={Ubeda, Gustavo N and Monteiro, Joao and Rezende, Solange O and Lobato, Fabio},
+  booktitle={Simp{\'o}sio Brasileiro de Sistemas de Informa{\c{c}}{\~a}o (SBSI)},
+  pages={147--151},
+  year={2025},
+  organization={SBC}
+}
+
+@article{araujo2025artificial,
+  title={The Artificial Intelligence Integration in the Brazilian Legal Sector: A Systematic Review},
+  author={Ara{\'u}jo, Gabriele S and Santana, Ewaldo EC and Junior, Antonio FL Jacob and Lobato, F{\'a}bio MF},
+  journal={Simp{\'o}sio Brasileiro de Sistemas de Informa{\c{c}}{\~a}o (SBSI)},
+  pages={575--584},
+  year={2025},
+  publisher={SBC}
+}
+
+@inproceedings{justino2025business,
+  title={A Business Intelligence Platform to Support Legal Data Management at the TJMA},
+  author={Justino, Adrielson F and Neto, Jonas CS and Rodrigues, Thyago M and Santana, Ewaldo EC and Junior, Antonio FLJ and Lobato, Fabio MF},
+  booktitle={Simp{\'o}sio Brasileiro de Sistemas de Informa{\c{c}}{\~a}o (SBSI)},
+  pages={555--564},
+  year={2025},
+  organization={SBC}
+}
+
+
+@incollection{fernandez2025analysis,
+  title={Analysis of News About the Amazon in the Light of the Sustainable Development Goals},
+  author={Fernandez, Jonathan Oliveira and de Sousa Ara{\'u}jo, Gabriele and da Silva, Marcelino Silva and Lobato, F{\'a}bio Manoel Fran{\c{c}}a},
+  booktitle={Amazon 2030-Sustainability Issues in the World's Largest Rainforest Region},
+  pages={215--229},
+  year={2025},
+  publisher={Springer}
+}
 
 
 @article{santos8use,
