--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,59 @@
 @string{aps = {American Physical Society,}}
 
 
+@inproceedings{justino2025comparative,
+  title={A Comparative Study of BERT Models for Semantic Retrieval of Brazilian Legal Precedents},
+  author={Justino, Adrielson Ferreira and Junior, Ant{\^o}nio Fernando Lavareda Jacob and Lobato, F{\'a}bio Manoel Fran{\c{c}}a},
+  booktitle={Symposium on Knowledge Discovery, Mining and Learning (KDMiLe)},
+  pages={65--72},
+  year={2025},
+  organization={SBC}
+}
+
+@inproceedings{carmo2025concentration,
+  title={Concentration and Diversity in Collaboration Networks in Microelectronics: A Study on CNPq Productivity Fellows},
+  author={Carmo, Fernando A and Silva, Gustavo S and Jacob, Antonio FL and Lobato, F{\'a}bio MF},
+  booktitle={2025 39th Symposium on Microelectronics Technology and Devices (SBMicro)},
+  volume={1},
+  pages={1--4},
+  year={2025},
+  organization={IEEE}
+}
+
+@inproceedings{rocha12025using,
+  title={Using TensorFlow Parallelism on GPU},
+  author={Rocha$^1$, Gustavo Gusm{\~a}o and Lobato, F{\'a}bio MF},
+  booktitle={Hybrid Intelligent Systems: 23rd International Conference on Hybrid Intelligent Systems (HIS 2023), December 11-13, 2023, Volume 2: Large Language Models and Machine Learning},
+  volume={1224},
+  pages={307},
+  year={2025},
+  organization={Springer Nature}
+}
+
+@inproceedings{carreteiro2025avaliaccao,
+  title={Avalia{\c{c}}ao do impacto de entradas multimodais em LLMs: um estudo de caso de respostas ao POSCOMP},
+  author={Carreteiro, Florindo RS and de Sousa, Fernando A and Marcacini, Ricardo M and Lobato, F{\'a}bio MF},
+  booktitle={Workshop sobre Educa{\c{c}}{\~a}o em Computa{\c{c}}{\~a}o (WEI)},
+  pages={678--689},
+  year={2025},
+  organization={SBC}
+}
+
+@article{araujo2025hybrid,
+  title={Hybrid Approaches for Pneumonia Detection in X-rays: Combining CNNs and ML Classifiers},
+  author={Ara{\'u}jo, Gabriele S and Cortes, Omar Andres C and Reinhold, Olaf and Lobato, Fabio MF},
+  journal={Annals of Computer Science and Information Systems},
+  volume={43},
+  pages={461--470},
+  year={2025}
+}
+
+@inproceedings{golo2025large,
+  title={Large language models ensemble for biochemical properties detection in scientific articles},
+  author={G{\^o}lo, Marcos Paulo Silva and Medeiros J{\'u}nior, Jos{\'e} Gilberto Barbosa de and Vilas Boas, Gabriele Souza and Lobato, F{\'a}bio Manoel Fran{\c{c}}a and Silva, Diego Furtado and Marcacini, Ricardo Marcondes},
+  booktitle={Proceedings},
+  year={2025}
+}
 
 @inproceedings{ubeda2025avaliaccao,
   title={Avalia{\c{c}}ao Autom{\'a}tica da Qualidade das Respostas para Reclama{\c{c}}oes no Setor de Telefonia no Brasil},
