--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,6 +13,19 @@
   organization={SBC}
 }
 
+@article{RMPE1982,
+	author = {Alessandra Batista e Marcia Arouca e Fábio Lobato},
+	title = {Estratégias de digitalização comunicacional para Micro e Pequenas Empresas como promotoras da inovação e competitividade},
+	journal = {REVISTA  DA  MICRO  E  PEQUENA  EMPRESA},
+	volume = {18},
+	number = {3},
+	year = {2025},
+	keywords = {},
+	abstract = {A globalização, as inovações e a pandemia da COVID-19 promoveram mudanças nas negociações por meio da digitalização comunicacional em mídias digitais. Portanto, Micro e Pequenas Empresas (MPEs) precisaram adaptar-se abruptamente. Para mitigar impactos e gerar competitividade, propôs-se transferência de know how por intermédio de mapeamento com uso da abordagem teórica Tecnologia-Organização-Ambiente (TOE), Quadro Europeu de Avaliação de Competências (DIGICOMP) e os modelos de negócio alinhados ao digital. Dessa forma, constituem questões analisadas no artigo: Q1- Quais fatores impedem a digitalização comunicacional das MPEs? Q2 - Quais estratégias digitais podem auxiliar na competitividade das MPEs?  Para tanto, foi realizada pesquisa bibliográfica, documental e pesquisa-ação em Santarém / Pará. Além de pesquisa prescritiva, de caráter quantitativo e qualitativo, foram desenvolvidos guias e programas de mídia instrucionais, norma de padronização dos processos da comunicação digital e análise do impacto na competividade. Os resultados demonstraram que existe tecnologia disponível, porém, sem aproveitamento pleno pelas MPEs. Observou-se barreiras, como a falta de treinamento dos recursos digitais e de tempo para planejamento estratégico e, como fatores influenciadores, pressão mercadológica, concorrencial e políticas públicas. Conclui-se que há espaço para ganho da competitividade com uso das mídias digitais, baseado em planejamento estratégico e desenvolvimento de habilidades.},
+	issn = {1982-2537},	pages = {60--79},	doi = {10.6034/rmpe.v18i3.1982},
+	url = {https://www.cc.faccamp.br/ojs-2.4.8-2/index.php/RMPE/article/view/1982}
+}
+
 @inproceedings{carmo2025concentration,
   title={Concentration and Diversity in Collaboration Networks in Microelectronics: A Study on CNPq Productivity Fellows},
   author={Carmo, Fernando A and Silva, Gustavo S and Jacob, Antonio FL and Lobato, F{\'a}bio MF},
